February 13, 2025: Version 1.0.0 - Initial Release
    Added basic list
    Added level names
    Added creator names
    Added placeholder thumbnails
    Added placeholder header
    Added clean style

February 14, 2025: Version 1.1.0 - Formating
    Added website header
    Added level thumbnails
    Added ID copying
    Tweaked visual style
    Window size bugfixes

February 19, 2025: Version 1.2.0 - ID Copying
    Added changelog
    Added dedicated "Copy ID" button
    Added integrated "ID Copied" confirmation popup
    Added website credit to Coinvessel
    More window size bugfixes

February 19, 2025: Version 1.3.0 - List Changes & Fastest Times
    Placed zimbabwe by TheNewCodex at #13 above le funky ufo level and below average udufopcl level
    Added fastest time for levels
    Added link to join the discord

January 16, 2026: Version 2.0.0 - Re-Release!
    Basically re-did how level data is stored and displayed, making it easier to edit
    Placed a ton of levels (not gonna list them all, but there's like 20 now :o)
    "UDUFOPCL is so back" - Coinvessel <3

January 31, 2026: Version 2.0.1 - List Change
    Placed black man chamber at #15 above Renewal and below spam challenge 1

February 1, 2026: Version 2.0.2
    Placed NullU at #20 below zimbabwe and above TOOMDUDUFOIGDPCLBM
    Moved le funky ufo lvl to #19 (from #22) pushing NullU uot of the top 20
    Placed AntiAntigravity at #13 above mycat sigma boy chal and below vsc but ufo