@@ -206,6 +206,14 @@
 				<span id="time23">time</span>
 			</div>
 
+			<!-- 24 -->
+			<div class="level">
+				<img id="image24" loading="lazy" src="" width="0px" alt="picture">
+				<h1>#24 – <b id="name24">name</b><br><span id="creator24">creator</span></h1>
+				<div><img onclick="copy(data[24].ID)" title="Copy ID" class="copy" src="copyW.png" alt="copy"></div>
+				<span id="time24">time</span>
+			</div>
+
 		<!-- Self promo :) -->
 		<br><br>
 		<footer>Website made by <a href="https://www.youtube.com/@CoinvesselGD/" target="_blank"><b>CoinvesselGD</b></a></footer>
