@@ -30,10 +30,18 @@ January 16, 2026: Version 2.0.0 - Re-Release!
     Placed a ton of levels (not gonna list them all, but there's like 20 now :o)
     "UDUFOPCL is so back" - Coinvessel <3
 
-January 31, 2026: Version 2.0.1 - List Change
+January 31, 2026: Version 2.0.1 - List Placement
     Placed black man chamber at #15 above Renewal and below spam challenge 1
 
-February 1, 2026: Version 2.0.2
+February 1, 2026: Version 2.0.2 - List Placements
     Placed NullU at #20 below zimbabwe and above TOOMDUDUFOIGDPCLBM
     Moved le funky ufo lvl to #19 (from #22) pushing NullU uot of the top 20
     Placed AntiAntigravity at #13 above mycat sigma boy chal and below vsc but ufo
+
+February 2, 2026: Version 2.0.3 - List Placement (woah new top 1)
+    Placed GODHANDUFO at #1 pushing BlUDUFObath out of the top 5 and agony out of the top 10
+
+To do:
+    Upcoming levels
+    Open verifications
+    Skillsets
